--- a/index.html
+++ b/index.html
@@ -2,11 +2,42 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta content="ie=edge" http-equiv="X-UA-Compatible">
+  <!-- Downloaded from https://bootswatch.com/ -->
+  <link href="css/bootstrap.min.css" rel="stylesheet">
   <title>GitHub User Search</title>
 </head>
 <body>
-  
+  <nav class="navbar navbar-dark bg-primary mb-3">
+    <div class="container">
+      <a class="navbar-brand" href="#">GitHub User Finder</a>
+    </div>
+  </nav>
+  <div class="container searchContainer">
+    <div class="search card card-body">
+      <h2>Search GitHub Users</h2>
+      <p class="lead">Enter a username to fetch a the user's profile and repos.</p><input class=
+      "form-control" id="search-user" placeholder="Github Username..." type="text">
+    </div>
+    <hr>
+    <div id="profile"></div>
+  </div>
+  <footer class="mt-5 p-3 text-center bg-light">
+    GitHub User Finder &copy; 2018
+  </footer><!-- Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js">
+  </script> 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js">
+  </script> 
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js">
+  </script> <!-- Our app's js -->
+   
+  <script src="js/github.js">
+  </script> 
+  <script src="js/ui.js">
+  </script> 
+  <script src="js/app.js">
+  </script>
 </body>
 </html>
