add the github class

--- a/index.html
+++ b/index.html
@@ -25,13 +25,15 @@
   </div>
   <footer class="mt-5 p-3 text-center bg-light">
     GitHub User Finder &copy; 2018
-  </footer><!-- Bootstrap JS -->
+  </footer>
+  <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js">
   </script> 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js">
   </script> 
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js">
-  </script> <!-- Our app's js -->
+  </script> 
+  <!-- Our app's js -->
    
   <script src="js/github.js">
   </script> 
