completed show alert message function and clear function

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <a class="navbar-brand" href="#">GitHub User Finder</a>
     </div>
   </nav>
-  <div class="container searchContainer">
+  <div class="container search-container">
     <div class="search card card-body">
       <h2>Search GitHub Users</h2>
       <p class="lead">Enter a username to fetch a the user's profile and repos.</p><input class=
