--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="ie=edge" http-equiv="X-UA-Compatible">
   <!-- Downloaded from https://bootswatch.com/ -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <link href="css/bootstrap.css" rel="stylesheet">
   <title>GitHub User Search</title>
 </head>
 <body>
@@ -26,15 +26,7 @@
   <footer class="mt-5 p-3 text-center bg-light">
     GitHub User Finder &copy; 2018
   </footer>
-  <!-- Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js">
-  </script> 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js">
-  </script> 
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js">
-  </script> 
   <!-- Our app's js -->
-   
   <script src="js/github.js">
   </script> 
   <script src="js/ui.js">
