adding comments to project

--- a/index.html
+++ b/index.html
@@ -27,11 +27,8 @@
     GitHub User Finder &copy; 2018
   </footer>
   <!-- Our app's js -->
-  <script src="js/github.js">
-  </script> 
-  <script src="js/ui.js">
-  </script> 
-  <script src="js/app.js">
-  </script>
+  <script src="js/github.js"></script> 
+  <script src="js/ui.js"></script> 
+  <script src="js/app.js"></script>
 </body>
 </html>
